fix: set z-index on header

--- a/src/charity-auction-ui/src/layout/Header/header.module.css
+++ b/src/charity-auction-ui/src/layout/Header/header.module.css
@@ -5,6 +5,7 @@
   padding-bottom: 40px;
 
   position: fixed;
+  z-index: 10;
   background-color: #fff;
 }
 
